--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-vue": "^4.0.11",
+    "ejs": "^1.0.0",
     "jade": "~1.11.0",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.12",
